Add admin navbar

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<app-admin-navbar></app-admin-navbar>
+
+<div class="dashboard-content">
+    <p>Dashboard</p>
+    <!-- ... rest of your dashboard content ... -->
+  </div>
