--- a/src/app/features/login/login-page/login-page.component.css
+++ b/src/app/features/login/login-page/login-page.component.css
@@ -1,5 +1,5 @@
 .custom-bg {
-    background-image: url('/assets/images/background.png');
+    background-image: url('/assets/images/background.jpg');
     background-size: cover;
     background-position: center;
 }
