--- a/src/app/features/login/login-page/login-page.component.html
+++ b/src/app/features/login/login-page/login-page.component.html
@@ -26,8 +26,8 @@
         {{ errorMessage }}
       </div>
       <button type="submit" [disabled]="!loginForm.valid || isLoading"
-        class="w-full text-white bg-indigo-500 py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-indigo-500 text-lg transition duration-150 ease-in-out"
-        [class.hover:bg-indigo-600]="loginForm.valid" [class.cursor-not-allowed]="!loginForm.valid">
+        class="w-full text-white bg-pink-400 py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-pink-500 text-lg transition duration-150 ease-in-out"
+        [class.hover:bg-pink-600]="loginForm.valid" [class.cursor-not-allowed]="!loginForm.valid || isLoading">
         {{ isLoading ? 'Logging in...' : 'Log In' }}
       </button>
     </form>
