Update admin navbar ui

--- a/src/app/components/admin-navbar/admin-navbar.component.css
+++ b/src/app/components/admin-navbar/admin-navbar.component.css
@@ -1,12 +1,14 @@
-/* .active {
-    font-weight: bold;
-} */
-
 .nav-link {
-    transition: 0.3s ease-out;
-    border-bottom: 2px solid transparent; /* Initial state with transparent border */
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
+    border-bottom: 2px solid transparent;
 }
 
 .nav-link:hover {
-    border-bottom: 2px solid #ce3c83; /* Hover state with colored border */
+    border-bottom: 2px solid #ce3c83;
+}
+
+.is-active {
+    font-weight: bold;
+    color: #ff69b4;
+    /* Example: Pink color for active link */
 }
