--- a/src/app/components/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin-navbar/admin-navbar.component.html
@@ -5,9 +5,9 @@
             <span class="ml-3 text-xl">Ramirez Bakes</span>
         </a>
         <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 nav-link" [class.active]="isActive('dashboard')">Dashboard</a>
-            <a class="mr-5 nav-link" [class.active]="isActive('account')">Account</a>
-            <a class="mr-5 nav-link" [class.active]="isActive('logout')">Logout</a>
+            <a class="mr-5 nav-link" [routerLink]="['/dashboard']" [routerLinkActive]="['is-active']">Dashboard</a>
+            <a class="mr-5 nav-link" [routerLink]="['/account']" [routerLinkActive]="['is-active']">Account</a>
+            <a class="mr-5 nav-link" [routerLink]="['/logout']" [routerLinkActive]="['is-active']">Logout</a>
         </nav>
         <button
             class="inline-flex items-center bg-pink-300 border-0 py-1 px-3 focus:outline-none hover:bg-pink-500 rounded text-base mt-4 md:mt-0">Go to Shop
