--- a/src/app/features/login/login-page/login-page.component.html
+++ b/src/app/features/login/login-page/login-page.component.html
@@ -4,25 +4,25 @@
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
       <div class="relative mb-6">
         <input type="email" id="email" formControlName="email" required
-          class="peer block w-full rounded border bg-gray-50 px-3 py-3 text-gray-700 focus:outline-none focus:border-gray-300"
+          class="peer block w-full text-sm rounded border bg-gray-50 p-5 text-gray-700 focus:outline-none focus:border-gray-300"
           [class.filled]="loginForm.get('email')?.value">
         <label for="email"
-          class="pointer-events-none absolute left-3 top-2 text-sm text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-2 peer-focus:scale-90 peer-focus:text-primary"
+          class="pointer-events-none absolute left-3 top-2 text-xs p-2 text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-2 peer-focus:scale-90 peer-focus:text-primary"
           [class.filled-label]="loginForm.get('email')?.value">
           Email address
         </label>
       </div>
       <div class="relative mb-6">
         <input type="password" id="password" formControlName="password" required
-          class="peer block w-full rounded border rounded border bg-gray-50 px-3 py-3 text-gray-700 focus:outline-none focus:border-gray-300"
+          class="peer block w-full rounded border text-sm  rounded border bg-gray-50 p-5 text-gray-700 focus:outline-none focus:border-gray-300"
           [class.filled]="loginForm.get('password')?.value">
         <label for="password"
-          class="pointer-events-none absolute left-3 top-2 text-sm text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-2 peer-focus:scale-90 peer-focus:text-primary"
+          class="pointer-events-none absolute left-3 top-2 text-xs p-2 text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-2 peer-focus:scale-90 peer-focus:text-primary"
           [class.filled-label]="loginForm.get('password')?.value">
           Password
         </label>
       </div>
-      <div *ngIf="errorMessage" class="text-red-600 mb-4">
+      <div *ngIf="errorMessage" class="text-red-600 mb-4 text-sm">
         {{ errorMessage }}
       </div>
       <button type="submit" [disabled]="!loginForm.valid || isLoading"
