--- a/src/app/components/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin-navbar/admin-navbar.component.html
@@ -1,16 +1,17 @@
 <header class="text-black-400 header body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
         <a class="flex title-font font-medium items-center text-black mb-4 md:mb-0">
-            <img src="/assets/images/cookie_logo.png" alt="Ramirez Bakes" class="w-10 h-10" />
+            <img src="/assets/images/cookie_logo.svg" alt="Ramirez Bakes" class="w-10 h-10" />
             <span class="ml-3 text-xl">Ramirez Bakes</span>
         </a>
         <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <a class="mr-5 nav-link" [routerLink]="['/dashboard']" [routerLinkActive]="['is-active']">Dashboard</a>
             <a class="mr-5 nav-link" [routerLink]="['/account']" [routerLinkActive]="['is-active']">Account</a>
-            <a class="mr-5 nav-link" [routerLink]="['/logout']" [routerLinkActive]="['is-active']">Logout</a>
+            <a class="mr-5 nav-link" [routerLink]="['/login']" [routerLinkActive]="['is-active']">Logout</a>
         </nav>
-        <button
-            class="inline-flex items-center bg-pink-300 border-0 py-1 px-3 focus:outline-none hover:bg-pink-500 rounded text-base mt-4 md:mt-0">Go to Shop
+        <button (click)="redirectToAboutUs()"
+            class="inline-flex items-center bg-pink-300 border-0 py-1 px-3 focus:outline-none hover:bg-pink-500 rounded text-base mt-4 md:mt-0">Go
+            to Shop
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 class="w-4 h-4 ml-1" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
